driver/tests/snap/parse_error/const_object_type_universe/0_input.splic
code def answer: Type = u32;
